@@ -18,6 +18,16 @@ if [ $# -gt 1 ]; then
     echo hejsan
 fi
 
+a=5
+while [ $a -gt 0 ]; do
+    a=$(($a - 1))
+    echo "Count $a"
+done
+
+for file in `ls *`; do
+    echo $file
+done
+
 case $# in
     1)
         echo "1 args"
